--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@ https://www.tooplate.com/view/2095-level
                     </div>
                 </div>
             </div>
+            </div>
             <div class="tm-section tm-bg-img" id="tm-section-1">
                 <div class="tm-bg-white ie-container-width-fix-2">
                     <div class="container ie-h-align-center-fix">
